changed web page text and content

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,21 @@
 <h1>{{title}}</h1>
 <p>Welcome to {{title}}</p>
+
+<h2>{{tits}}</h2>
+<p>Make heroku.com Account</p>
+<p>Install OhMyZSH on Terminal</p>
+<p>Install Node inside Zsh</p>
+<p>Install Git inside Zsh</p>
+<p>npm install express -g</p>
+<p>npm install heroku-cli -g</p>
+
+
+<h2>{{titties}}</h2>
+<p>mkdir firstwebapp</p>
+<p>cd firstwebapp</p>
+<p>git init</p>
+<p>heroku login</p>
+<p>heroku create *nAMEoFyOURcHOOSIN*</p>
+<p>express --hbs --git</p>
+<p>git push heroku master</p>
+<p>heroku open</p>
