--- a/views/index.hbs
+++ b/views/index.hbs
@@ -17,5 +17,7 @@
 <p>heroku login</p>
 <p>heroku create *nAMEoFyOURcHOOSIN*</p>
 <p>express --hbs --git</p>
+<p>git add .</p>
+<p>git commit -m " did a thing"</p>
 <p>git push heroku master</p>
 <p>heroku open</p>
